# convergio-doctor

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
.github/workflows/: release.yml
crates/convergio-cli/src/: cli_plan_handlers.rs  cli_task_handlers.rs
crates/convergio-doctor/: Cargo.toml
crates/convergio-doctor/src/: check_advanced.rs  check_beta.rs  check_beta_mcp.rs  check_beta_skills.rs  check_chaos_daemon.rs  check_chaos_db.rs  check_chaos_net.rs  check_cleanup.rs  check_command_sync.rs  check_config.rs  check_e2e_cleanup.rs  check_e2e_gates.rs  check_e2e_helpers.rs  check_e2e_ipc.rs  check_e2e_mesh.rs  check_e2e_org.rs  check_e2e_org_flow.rs  check_e2e_plan.rs  check_e2e_security.rs  check_e2e_skill_routes.rs  check_e2e_smoke.rs  check_e2e_smoke_ext.rs  check_e2e_wave_gate.rs  check_integrity.rs  check_projects.rs  check_real_world.rs  check_spec_compliance.rs  checks.rs  ext.rs  lib.rs  mcp_defs.rs  routes.rs  runtime.rs
crates/convergio-doctor/tests/: e2e_beta_checks.rs  e2e_checks.rs  e2e_routes.rs  helpers.rs
crates/convergio-orchestrator/src/: plan_routes_ext.rs
docs/adr/: 001-extraction.md  ADR-025-doctor-stress-tests.md  ADR-036-mcp-release-sync.md  ADR-037-audit-security-fixes.md
docs/guides/: getting-started.md
