[workspace]
resolver = "2"
members = ["crates/convergio-doctor"]

[workspace.package]
version = "0.1.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-doctor"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-db = "0.1"

# Convergio ecosystem
convergio-depgraph = "0.1"
convergio-mcp = "0.1"

# Common deps
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
toml = "1.1"
dirs = "6"
