[package]
name = "convergio-doctor"
description = "System diagnostics, health checks, and stress testing for Convergio"
version = "0.1.7"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-depgraph = { workspace = true }
convergio-mcp = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
serde_json = { workspace = true }
axum = { workspace = true }
